# hobel-inperso-ieq

./: .coverage  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code_quality.yml  publish_docker_image.yml  tests.yml
backend/: Dockerfile  README.md  docker-compose.yml
data/: tags.csv
frontend/: docker-compose.yml
grafana_dashboards/: sensor_data.json  sensor_status.json
inperso/: __init__.py  config.py  config.yaml  fetch.py  fetch_surveys.py  tags.py  utils.py
inperso/atlas_index/: compute_index.py  index.py  preprocessing.py  scores.py
inperso/data/: tags.csv
inperso/data_acquisition/: __init__.py  airly.py  airthings.py  qualtrics.py  read_db.py  retrieve.py  retriever.py  uhoo.py  write_db.py  writer.py
inperso/database/: __init__.py  buckets.py  delete.py  read.py  write.py
scripts/: fetch_uhoo_from_files.py  generate_grafana_variables.py  request_uhoo_minute_data.py  retrieve_historical_with_api.py
tests/: test_atlas_index.py  test_foo.py
tests/test_data_acquisition/: test_retrieve.py
